Import of HAARG/MooX-Aliases-0.001001.tar.gz from CPAN.
gitpan-cpan-distribution: MooX-Aliases
gitpan-cpan-version:      0.001001
gitpan-cpan-path:         HAARG/MooX-Aliases-0.001001.tar.gz
gitpan-cpan-author:       HAARG
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -5,15 +5,15 @@ SYNOPSIS
       package MyClass;
       use Moo;
       use MooX::Aliases;
-  
+
       has this => (
           is    => 'rw',
           alias => 'that',
       );
-  
+
       sub foo { my $self = shift; print $self->that }
       alias bar => 'foo';
-  
+
       my $o = MyApp->new();
       $o->this('Hello World');
       $o->bar; # prints 'Hello World'
@@ -23,12 +23,12 @@ SYNOPSIS
       package MyRole;
       use Moo::Role;
       use MooX::Aliases;
-  
+
       has this => (
           is    => 'rw',
           alias => 'that',
       );
-  
+
       sub foo { my $self = shift; print $self->that }
       alias bar => 'foo';
 
@@ -47,6 +47,10 @@ DESCRIPTION
 FUNCTIONS
     alias $alias, $method
         Creates $alias as a method that is aliased to $method.
+
+CAVEATS
+    This module uses the "BUILDARGS" to map the attributes. If a class uses
+    a custom "BUILDARGS", this module may not behave properly.
 
 SEE ALSO
     MooseX::Aliases
