--- a/Changes
+++ b/Changes
@@ -1,2 +1,7 @@
+Revision history for MooX::Aliases
+
+0.001001 - 2014-05-25
+  - fix compatibility with namespace::clean
+
 0.001000 - 2013-05-02
- - initial release
+  - initial release
