--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for MooX::Aliases
 
+0.001002 - 2014-08-16
+  - fix compatibility with perl 5.6
+  - list perl prerequisite in metadata
+  - include correct developer prerequisites
+
 0.001001 - 2014-05-25
   - fix compatibility with namespace::clean
 
