Import of HAARG/MooX-Aliases-0.001003.tar.gz from CPAN.
gitpan-cpan-distribution: MooX-Aliases
gitpan-cpan-version:      0.001003
gitpan-cpan-path:         HAARG/MooX-Aliases-0.001003.tar.gz
gitpan-cpan-author:       HAARG
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -69,6 +69,8 @@ AUTHOR
 
     *       Yuval Kogman <nothingmuch@woobling.org>
 
+    *       Daniel Gempesaw <gempesaw@gmail.com>
+
 COPYRIGHT
     Copyright (c) 2013 the MooX::Alises "AUTHOR" and "CONTRIBUTORS" as
     listed above.
