Import of HAARG/MooX-Aliases-0.001005.tar.gz from CPAN.
gitpan-cpan-distribution: MooX-Aliases
gitpan-cpan-version:      0.001005
gitpan-cpan-path:         HAARG/MooX-Aliases-0.001005.tar.gz
gitpan-cpan-author:       HAARG
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -71,6 +71,8 @@ AUTHOR
 
     *       Daniel Gempesaw <gempesaw@gmail.com>
 
+    *       Denis Ibaev <dionys@gmail.com>
+
 COPYRIGHT
     Copyright (c) 2013 the MooX::Alises "AUTHOR" and "CONTRIBUTORS" as
     listed above.
