--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for MooX::Aliases
 
+0.001005 - 2015-01-06
+  - fix +attribute overrides
+  - fix multi-attribute definitions
+
 0.001004 - 2014-12-09
   - remove synopsis test, as it is redundant and annoying to test
 
