--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for MooX::Aliases
 
+0.001006 - 2015-02-01
+  - name alias methods to avoid them getting autocleaned or detected by
+    Test::CleanNamespaces (RT#101814)
+
 0.001005 - 2015-01-06
   - fix +attribute overrides
   - fix multi-attribute definitions
